Experiment with HTML

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Challenger
+<h1 id="challenge">Challenge in Progress</h1>
+<p>Challenger task is to create a website <p>
+<li>Unordered lists, and:<ol>
+<li> Add links to different files</li>
+<li> Add sample code</li>
+<li>Add pictures</li>
+</ol>
+</li>
+
